<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="movie"
            type="com.mobg5.filmbox.data.model.ResultsMovies"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mobg5.filmbox.service.RandomFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_random_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/random_button"
                android:elevation="2dp"
                android:textColor="#809B9D9E"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/randomButton"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:backgroundTint="#FFFFFF"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="80dp"
                android:alpha="0.5"
                android:text="@string/random_button"
                app:borderWidth="3dp"
                app:background="@drawable/random_button"
                android:contentDescription="@string/description_random_button" />


            <ImageView
                android:id="@+id/random_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:imageUrl="@{@string/poster_path(movie.posterPath)}"
                android:contentDescription="@string/description_random_image" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>