<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mobg5.filmbox.detail.MovieDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.mobg5.filmbox.detail.MovieDetailsFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/movie_details_image"
                android:scaleType="fitCenter"
                app:imageUrl="@{@string/poster_path(viewModel.selectedMovie.posterPath)}"
                tools:src="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:elevation="2dp"
                android:layout_marginTop="-55dp">

                <TextView
                    android:id="@+id/title_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{viewModel.selectedMovie.title}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/release_date_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.selectedMovie.releaseDate}"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/star_note"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_rate_note"
                            android:contentDescription="@string/star_rate_image" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/movie_vote_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(viewModel.selectedMovie.voteAverage)}"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/max_note"
                                android:textColor="@color/grey"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/movie_note_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{String.valueOf(viewModel.selectedMovie.voteCount)}"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/overview_detail_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{viewModel.selectedMovie.overview}"
                        android:textAlignment="gravity"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_to_list_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:layout_marginEnd="70dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="200dp"
                        android:text="@string/add_to_list_button"
                        android:backgroundTint="@color/colorFab" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
